# distributed_graph_flow

./: .bazelrc  BUILD  CHANGELOG.md  Dockerfile  MODULE.bazel  README.md  api_test.py  beam.py  leak.dic  requirements-dev.txt  requirements.txt  setup.py
benchmark/: BUILD  bq_parquet_io.py  bq_parquet_io_main.py  in_process_io.py  in_process_io_main.py  in_process_io_test.py  in_process_sampling.py  in_process_sampling_main.py  in_process_sampling_test.py  utils.py
dgf/: BUILD  __init__.py
doc/: .readthedocs.yaml  README.md  copy_external.py  mkdocs.yml  pack.sh  preview.sh  requirements.txt
doc/docs/: api.md  (+5 more)
examples/: BUILD  convert_hgraph.py  convert_hgraph_to_gf_graph.py  count_nodes.py  create_graph_samples_distributed.borg  create_graph_samples_distributed.py  create_graph_samples_in_process.py  create_graph_samples_semi_distributed_v2.py  feature_statistics_on_graph_samples.py  feature_statistics_on_hgraph.py  readme.md  validate_exported_graph.py
script/: BUILD  build.sh  build_pip_package.sh  gen_api.py  test.sh  toy.py
test_data/: BUILD  dummy_golden.txt  link_prediction_architecture.txt  link_prediction_hetero_gat_architecture.txt  node_prediction_architecture.txt  node_prediction_hetero_gat_architecture.txt  spanner_graph_sampler_test_generate_cte_query.txt  spanner_graph_sampler_test_generate_cte_query_directed.txt  spanner_graph_sampler_test_generate_gql_query.txt  spanner_graph_sampler_test_json_to_in_memory_graphs.json  spanner_graph_sampler_test_json_to_in_memory_graphs_cte.json  spanner_graph_test_edge_query_no_properties.sql  toy.parquet  (+3 more)
(+390 files in other folders)
